--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=1"
+    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=1",
+    "TuongsDBConnection": "Server=.,1433;Database=RailwayDB;User=;Password=;TrustServerCertificate=True;"
   }
 }
