--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppDbContextConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=1",
-    "TuongsDBConnection": "Server=.,1433;Database=RailwayDB;User=;Password=;TrustServerCertificate=True;"
+    "TuongsDBConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=soi0109;TrustServerCertificate=True;"
   }
 }
