--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContextConnection": "Server=.,1500;Database=RailwayDB;User=sa;Password=1"
+    "AppDbContextConnection": "Server=.,1500;Database=RailDB;User=sa;Password=1"
   }
 }
