--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB2;User=sa;Password=soi0109"
+    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=soi0109"
   }
 }
