--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB;User=sa;Password=1"
+    "AppDbContextConnection": "Server=.,1433;Database=RailwayDB3;User=sa;Password=soi0109"
   },
   "PaypalSettings": {
     "ClientId": "AcIC1-J-5hNvdsb2s4yBnq8m1aU1-S-dZ3rIJPXi_vp6JVSLmafMW7l4i9M_s_or99Q-ZpFzUllnM-5g",
